syntax = "proto3";

package ory.keto.acl.v1alpha1;

option go_package = "github.com/ory/keto/proto/ory/keto/acl/v1alpha1;acl";
option csharp_namespace = "Ory.Keto.Acl.V1Alpha1";
option java_multiple_files = true;
option java_outer_classname = "AclProto";
option java_package = "sh.ory.keto.acl.v1alpha1";
option php_namespace = "Ory\\Keto\\Acl\\V1alpha1";


// RelationTuple defines a relation between an Object and a Subject.
message RelationTuple {
  // The namespace this relation tuple lives in.
  string namespace = 1;
  // The object related by this tuple.
  // It is an object in the namespace of the tuple.
  string object = 2;
  // The relation between an Object and a Subject.
  string relation = 3;
  // The subject related by this tuple.
  // A Subject either represents a concrete subject id or
  // a `SubjectSet` that expands to more Subjects.
  Subject subject = 4;
}

// Subject is either a concrete subject id or
// a `SubjectSet` expanding to more Subjects.
message Subject {
  // The reference of this abstract subject.
  oneof ref {
    // A concrete id of the subject.
    string id = 1;
    // A subject set that expands to more Subjects.
    // More information are available under [concepts](../concepts/subjects.mdx).
    SubjectSet set = 2;
  }
}

// SubjectSet refers to all subjects who have
// the same `relation` on an `object`.
message SubjectSet {
  // The namespace of the object and relation
  // referenced in this subject set.
  string namespace = 1;
  // The object related by this subject set.
  string object = 2;
  // The relation between the object and the subjects.
  string relation = 3;
}
